fix contrast

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-form-datepicker/ec-component-form-datepicker.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-form-datepicker/ec-component-form-datepicker.scss
@@ -183,7 +183,7 @@
 
     .is-outside-current-month .pika-button {
       background-color: $ecl-color-grey-10;
-      color: $ecl-color-grey-50;
+      color: $ecl-color-grey;
     }
   }
 
